# SmartMobility

./: .gitignore  convert_docx_to_md.py  render.yaml
backend/: .env.example  config.py  database.py  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/bll/: notifica_service.py  servizio_abbonamento.py  servizio_ai_adapter.py  servizio_gis.py  servizio_mappa.py  servizio_mobilita.py  servizio_offerte.py  servizio_parametri.py  servizio_prenotazione.py  servizio_pricing.py  servizio_recensione.py  servizio_regole_fine_corsa.py  servizio_report.py  servizio_segnalazione.py  servizio_storico_modifiche.py  servizio_suggerimenti.py  servizio_tariffa.py  servizio_utenti.py
backend/controllers/: abbonamento_controller.py  ap_controller.py  configurazione_controller.py  corsa_controller.py  homepage_utente_controller.py  login_controller.py  mezzo_operatore_controller.py  offerta_controller.py  operatore_controller.py  pagamenti_controller.py  prenotazione_utente_controller.py  pricing_controller.py  recensione_controller.py  regola_fine_corsa_controller.py  report_ap_controller.py  schemas.py  segnalazione_op_controller.py  segnalazione_utente_controller.py  storico_modifiche_controller.py  suggerimento_controller.py  tariffa_controller.py  utente_controller.py  utenti_op_controller.py  zona_ap_controller.py  zona_operatore_controller.py
backend/dal/: abbonamento_repository.py  attore_repository.py  corsa_repository.py  mezzo_repository.py  notifica_repository.py  offerta_repository.py  operatore_repository.py  pagamento_repository.py  prenotazione_repository.py  (+10 more)
(+329 files in other folders)
