[project]
name = "smartmobility-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "sqlalchemy>=2.0.49",
    "geoalchemy2>=0.14",
    "psycopg2-binary>=2.9",
    "supabase>=2.30.0",
    "python-dotenv>=1.2.2",
    "pydantic[email]>=2.13.4",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-dotenv>=0.5",
    "httpx>=0.27.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
